--- a/app/styles/components/dropdown.scss
+++ b/app/styles/components/dropdown.scss
@@ -15,7 +15,7 @@
   padding-top: 16px;
 }
 
-.dropdown-menu {
+.dropdown .dropdowntoggle .dropdown-menu {
   width: 212px;
   font-weight: lighter;
   border-radius: 4px;
