--- a/app/templates/users/new.hbs
+++ b/app/templates/users/new.hbs
@@ -1,1 +1,2 @@
-{{#user-form userData = model}}{{/user-form}}
+{{#user-form userData = model val = isUserRoute}}{{/user-form}}
+{{log "newHbs" isUserRoute}}
