--- a/app/styles/pages/users.scss
+++ b/app/styles/pages/users.scss
@@ -5,22 +5,19 @@
 
 
 .content {
-  margin-top: 108px;
   margin-left: 60px;
   padding: 0 24px;
-
-
 
 }
 
 .functionalities {
+  margin-top: 108px;
   height: 53px;
+  margin-left: 84px;
   font-weight: 600;
   display: flex;
 
 }
-
-
 
 .found-card-container {
   width: 100%;
@@ -46,24 +43,32 @@
   border-radius: 2px;
   text-align: center;
   max-width: 400px;
+ 
 }
 
-.card-text {
-  font-weight: 400;
-  font-size: 44px;
-  line-height: 78px;
-  color: $footerBg;
-}
+
+
 
 .circle-div {
-  margin-left: 50px;
+ 
   width: 82px;
   height: 82px;
   margin-bottom: 20px;
   border-radius: 50%;
   text-align: center;
   justify-content: center;
+  margin-left: 100px;
 
+}
+
+.circle-div{
+
+  .card-text {
+    font-weight: 400;
+    font-size: 44px;
+    line-height: 78px;
+    color: $footerBg;
+  }
 
 }
 
@@ -71,6 +76,7 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  
 }
 
 .search {
