--- a/app/styles/components/dropdown.scss
+++ b/app/styles/components/dropdown.scss
@@ -8,14 +8,14 @@
 
   width: fit-content;
   color: $filterText;
-  padding-left: 4px;
+  
 }
 
 .dropdown {
   padding-top: 16px;
 }
 
-.dropdown .dropdowntoggle .dropdown-menu {
+.dropdown .dropdown-menu {
   width: 212px;
   font-weight: lighter;
   border-radius: 4px;
