--- a/app/styles/pages/listview.scss
+++ b/app/styles/pages/listview.scss
@@ -49,7 +49,7 @@
   width: 10px;
   height: 10px;
   position: absolute;
-  bottom: 20px;
+  top: 10px;
   font-weight: 600;
 
 }
@@ -92,7 +92,7 @@
   
   .dropdown-menu {
     width: 186px;
-    
+    padding-bottom: 5px;
     margin-right: 50px;
     margin-top: 10px;
     color: black;
